Working Prototype of Game DinoJump Now With: Fancy Graphics Fancy Scorecard Updated Hitbox detection Removed Old Code Added New Animation system for cactus and allowed for more customisable release settings, Fixed position of cactus to floor
Add Variable Enemys, Current Movefunctionality us broken

--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@
     width: 600px;
     height: 200px;
     border: 1px solid black;
+    background-image: url("Assets/Images/background.jpg");
+    background-size: cover;
 }
 #character{
     width: 45px;
     height: 50px;
-    position: relative;
     top: 150px;
+    position: relative;
     margin-left: 40px;
     background-size: contain;
     background-repeat: no-repeat;
@@ -22,15 +24,27 @@
 .run {
     animation: DinoRun 400ms infinite linear;
 }
-#regCactus {
+.crouch {
+    top: 180px;
+    animation: DinoDuck 50ms linear infinite;
+}
+
+#enemy {
     width: 20px;
     height: 40px;
     position: absolute;
-    top: 210px;
-    left: 480px;
-    background-image: url("Assets/Images/cactusBig0000.png");
     background-size: contain;
+    left: 480px;
+}
 
+.regCactus {
+    background-image: url("Assets/Images/cactusBig0000.png");
+    top: 210px;
+
+}
+.pterodactyl {
+    background-image: url("Assets/Images/pterodactyl.png");
+    top: 150px;
 }
 
 @keyframes jump {
@@ -53,6 +67,18 @@
     0% {background-image: url("Assets/Images/dinorun0000.png");}
     100% {background-image: url("Assets/Images/dinorun0001.png");}
 }
+
+@keyframes DinoDuck {
+    0% {
+        top: 180px;
+        background-image: url("Assets/Images/dinoduck0000.png");
+    }
+    100% {
+        top: 180px;
+        background-image: url("Assets/Images/dinoduck0001.png");
+    }
+}
+
 @font-face {
     font-family: my8Bit;
     src:url("Assets/press-start-2p-font/PressStart2P-vaV7.ttf");
